--- a/Readme.org
+++ b/Readme.org
@@ -1,10 +1,10 @@
-#+TITLE: 敦煌抄本 / HFL
+#+TITLE: 黃帝陰符經講義 / HFL
 
 #+DATE: 2015-08-28 23:37:43.324289
 * 目次
- - [[file:_data][敦煌抄本 data]]
- - [[file:KR5a0110_000.txt][敦煌抄本 0]]
- - [[file:KR5a0110_001.txt][敦煌抄本 1]]
- - [[file:KR5a0110_002.txt][敦煌抄本 2]]
- - [[file:KR5a0110_003.txt][敦煌抄本 3]]
- - [[file:KR5a0110_004.txt][敦煌抄本 4]]
+ - [[file:_data][黃帝陰符經講義 data]]
+ - [[file:KR5a0110_000.txt][黃帝陰符經講義 0]]
+ - [[file:KR5a0110_001.txt][黃帝陰符經講義 1]]
+ - [[file:KR5a0110_002.txt][黃帝陰符經講義 2]]
+ - [[file:KR5a0110_003.txt][黃帝陰符經講義 3]]
+ - [[file:KR5a0110_004.txt][黃帝陰符經講義 4]]
